update plantit config

--- a/plantit.yaml
+++ b/plantit.yaml
@@ -1,8 +1,8 @@
-name: 3D Root Model Traits
+name: 3D Root Traits
 author: Suxing Liu
+image: shub://lsx1980/3D_model_traits_measurement
 public: True
 clone: False
 input: 'file'
 output: 'file'
-image: shub://lsx1980/3D_model_traits_measurement
 commands: python /opt/code/pipeline.py -p $INPUT -m surface.ply
