--- a/plantit.yaml
+++ b/plantit.yaml
@@ -3,6 +3,6 @@ author: Suxing Liu
 image: shub://lsx1980/3D_model_traits_measurement
 public: True
 clone: False
-input: 'file'
-output: 'file'
-commands: python /opt/code/pipeline.py -p $INPUT -m surface.ply
+from: file
+to: file
+commands: python /opt/code/pipeline.py -p "$INPUT" -m surface.ply
