--- a/plantit.yaml
+++ b/plantit.yaml
@@ -1,4 +1,4 @@
-name: 3D Root Phenes from Point Clouds
+name: DIRT\3D - Root Phenes from Point Clouds
 author: Suxing Liu
 image: shub://lsx1980/3D_model_traits_measurement
 public: True
