--- a/plantit.yaml
+++ b/plantit.yaml
@@ -7,3 +7,8 @@ from: file
 to: file
 commands: python /opt/code/pipeline.py -p "$INPUT" -m surface.ply
 logo: root_logo.jpg
+resources:
+  time: "03:00:00"
+  mem: "40GB"
+  tasks: 1
+  cores: 1
