--- a/plantit.yaml
+++ b/plantit.yaml
@@ -3,9 +3,18 @@ author: Suxing Liu
 image: shub://lsx1980/3D_model_traits_measurement
 public: True
 clone: False
-from: file
-to: file
-commands: python /opt/code/pipeline.py -p "$INPUT" -m surface.ply
+commands: python /opt/code/pipeline.py -p "$OUTPUT" -m "$INPUT"
+input:
+  path:
+  kind: files
+  filetypes:
+    - ply
+output:
+  path:
+  include:
+    patterns:
+      - nvm
+      - ply
 logo: root_logo.jpg
 resources:
   time: "03:00:00"
