--- a/plantit.yaml
+++ b/plantit.yaml
@@ -3,7 +3,7 @@ author: Suxing Liu
 image: shub://lsx1980/3D_model_traits_measurement
 public: True
 clone: False
-commands: python /opt/code/pipeline.py -p "$(dirname $INPUT)" -m "$INPUT"
+commands: python3 /opt/code/pipeline.py -p "$PWD" -m "$INPUT"
 input:
   path:
   kind: files
