--- a/plantit.yaml
+++ b/plantit.yaml
@@ -3,6 +3,7 @@ author: Suxing Liu
 image: docker://computationalplantscience/3d-model-traits
 public: True
 clone: False
+branch: plantit
 commands: python /opt/3D_model_reconstruction_demo/dirt3d.py "$INPUT"
 input:
   path:
