update plantit.yaml with env vars

--- a/plantit.yaml
+++ b/plantit.yaml
@@ -20,6 +20,9 @@ output:
       - csv
       - xlsx
 logo: root_logo.jpg
+env:
+  - LC_ALL=C.UTF-8
+  - LANG=C.UTF-8
 jobqueue:
   walltime: "03:00:00"
   memory: "40GB"
