--- a/plantit.yaml
+++ b/plantit.yaml
@@ -1,10 +1,8 @@
 name: DIRT3D Traits
 author: Suxing Liu
-image: docker://computationalplantscience/3d-model-traits
+image: docker://computationalplantscience/dirt3d-traits
 public: True
-clone: False
-branch: plantit
-commands: python3 /opt/3D_model_traits_demo/dirt3d.py "$INPUT"
+commands: /opt/3D_model_traits_demo/shim.sh
 input:
   path:
   kind: files
@@ -16,6 +14,7 @@ output:
     patterns:
       - png
       - jpg
+      - stl
       - txt
       - csv
       - xlsx
@@ -24,7 +23,7 @@ env:
   - LC_ALL=C.UTF-8
   - LANG=C.UTF-8
 jobqueue:
-  walltime: "03:00:00"
+  walltime: "04:00:00"
   memory: "40GB"
   processes: 1
   cores: 1
